| Bug #20809 | mysqldump does not backup TS and LG information correctly. | ||
|---|---|---|---|
| Submitted: | 2 Jul 2006 4:56 | Modified: | 27 Oct 2006 13:16 |
| Reporter: | Nikolay Grishakin | ||
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Linux (Linux) |
| Assigned to: | Bugs System | Target Version: | |
| Tags: | Test blocking, mysqldump, cluster, disk data | ||
[2 Jul 2006 4:56]
Nikolay Grishakin
[19 Sep 2006 9:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12187 ChangeSet@1.2308, 2006-09-19 17:07:21+10:00, stewart@willster.(none) +1 -0 BUG#20809 mysqldump does not backup TS and LG information correctly. We were not parsing the EXTRA field to get UNDO_BUFFER_SIZE for the CREATE LOGFILE GROUP statement in the dump.
[4 Oct 2006 9:45]
Stewart Smith
pushed to 5.1-ndb
[4 Oct 2006 16:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/13073 ChangeSet@1.2299, 2006-10-05 00:56:06+10:00, stewart@willster.(none) +1 -0 BUG#20809 mysqldump does not backup TS and LG information correctly restore of the dump (ndb_dd_dump test) was failing for probably a merge problem. fixed now.
[10 Oct 2006 20:33]
Jonas Oreland
pushed into 5.1.12
[27 Oct 2006 13:16]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.12 changelog. Tagged bug report with "mysqldump, Cluster" and
changelog entry as "NDB Cluster" since this appears to affect Cluster mostly if not
exclusively.
