BUG#20809 mysqldump does not backup TS and LG information correctly.

We were not parsing the EXTRA field to get UNDO_BUFFER_SIZE for the
CREATE LOGFILE GROUP statement in the dump.


client/mysqldump.c:
  parse the EXTRA field of INFORMATION_SCHEMA.FILES to determine the UNDO_BUFFER_SIZE